examples/test/testpolicy15917.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15917
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key20: value46
      key35: value31
      key4: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value46
      podSelector:
        matchLabels:
          key37: value12
